--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,6 +2,7 @@
   "name": "mobile",
   "version": "0.0.1",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "react-native start",
