--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,8 @@
   "proxy": "http://localhost:3000/",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native start",
+    "start": "expo start --web",
+    "native:start": "react-native start",
     "ios": "react-native run-ios",
     "android": "react-native run-android --active-arch-only",
     "compile": "tsc --noEmit -p . --pretty",
